# addon-factory-smartx-ui-test-library

./: .fossa.yml  .gitignore  .gitmodules  .licenserc.yaml  .pre-commit-config.yaml  .readthedocs.yml  .releaserc  404.html  Dockerfile-saucelabs  Dockerfile-splunk  Dockerfile-tests  LICENSE  README.md  docker-compose-ci.yml  index.html  istio_setup.yaml  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  pytest_splunk_addon-2.1.0-py3-none-any.whl  run_splunk.sh  setup.py  sitemap.xml  splunk_standalone.yaml
.circleci/: config.yml
.config/: config.yml
.github/: dependabot.yml
.github/workflows/: agreements.yaml  build-test-release.yaml  docs.yml  release-notes.yaml  unit_tests.yml
.reuse/: dep5
SmartX_UCC2/: __init__.py  base_test.py
SmartX_UCC2/components/: entity.py  input_table.py  table.py  tabs.py
SmartX_UCC2/controls/: button.py  message.py  single_select.py  textbox.py
SmartX_UCC2/pages/: logging.py
api_reference/: index.html
api_reference/backend_confs/: index.html
api_reference/base_test/: index.html
api_reference/components/: index.html
api_reference/components/base_component/: index.html
api_reference/components/conf_table/: index.html
api_reference/components/controls/: index.html
api_reference/components/dropdown/: index.html
api_reference/components/entity/: index.html
api_reference/components/input_table/: index.html
api_reference/components/login/: index.html
api_reference/components/table/: index.html
api_reference/components/tabs/: index.html
api_reference/pages/: index.html
api_reference/pages/logging/: index.html
api_reference/pages/login/: index.html
api_reference/pages/page/: index.html
api_reference/pages/proxy/: index.html
api_reference/plugin/: index.html
api_reference/utils/: index.html
change_log/: index.html
docs/: api_reference.md  api_reference.rst  backend_confs.md  backend_confs.rst  base_test.md  base_test.rst  change_log.md  conf.py  example_code.py  example_pytest.ini  getting_started.rst  how_to_use.md  how_to_use.rst  index.md  index.rst  make.bat  overview.md  overview.rst  plugin.md  plugin.rst  requirements.txt  utils.md  utils.rst
docs/api_reference/: backend_confs.md  base_test.md  index.md  plugin.md  utils.md
docs/api_reference/components/: base_component.md  conf_table.md  dropdown.md  entity.md  index.md  input_table.md  login.md  table.md  tabs.md
docs/api_reference/pages/: index.md  logging.md  login.md  page.md  proxy.md
docs/components/: base_component.md  base_component.rst  conf_table.md  conf_table.rst  dropdown.md  dropdown.rst  entity.md  entity.rst  index.md  index.rst  input_table.md  input_table.rst  login.md  login.rst  table.md  table.rst  tabs.md  tabs.rst
docs/components/controls/: base_control.md  base_control.rst  button.md  button.rst  checkbox.md  checkbox.rst  index.md  index.rst  learn_more.md  learn_more.rst  message.md  message.rst  multi_select.md  multi_select.rst  oauth_select.md  oauth_select.rst  single_select.md  single_select.rst  textbox.md  textbox.rst  toggle.md  toggle.rst
docs/getting_started/: index.md  setup.md  test_case.md  test_page.md
docs/pages/: index.md  index.rst  logging.md  logging.rst  login.md  login.rst  page.md  page.rst  proxy.md  proxy.rst
getting_started/: index.html
getting_started/setup/: index.html
getting_started/test_case/: index.html
getting_started/test_page/: index.html
how_to_use/: index.html
pytest_splunk_addon_ui_smartx/: __init__.py  backend_confs.py  base_test.py  plugin.py  splunk.py  utils.py
pytest_splunk_addon_ui_smartx/alert_actions/: __init__.py
pytest_splunk_addon_ui_smartx/alert_actions/components/: account_select.py  action_controls.py  alert_base_component.py  alert_base_control.py  button.py  checkbox.py  dropdown.py  searchbox.py  single_select.py  splunk_select.py  table.py  textbox.py  toggle.py
pytest_splunk_addon_ui_smartx/components/: action_chains.py  base_component.py  conf_table.py  dropdown.py  entity.py  input_table.py  login.py  message_tray.py  popup.py  table.py  tabs.py
pytest_splunk_addon_ui_smartx/components/controls/: base_control.py  button.py  checkbox.py  checkboxgroup.py  file.py  learn_more.py  message.py  multi_select.py  oauth_select.py  single_select.py  textarea.py  textbox.py  toggle.py
pytest_splunk_addon_ui_smartx/pages/: logging.py  login.py  page.py  proxy.py
tests/: entrypoint.sh  pytest-ci.ini
tests/testdata/Splunk_TA_UCCExample/: globalConfig.json
tests/ui/: conftest.py  pytest-ci.ini  pytest.ini  test_splunk_ta_example_addon_account.py  test_splunk_ta_example_addon_alert_actions.py  test_splunk_ta_example_addon_custom.py  test_splunk_ta_example_addon_input.py  test_splunk_ta_example_addon_input_1.py  test_splunk_ta_example_addon_input_2.py  test_splunk_ta_example_addon_input_common.py  test_splunk_ta_example_addon_logging.py  test_splunk_ta_example_addon_proxy.py
tests/ui/Example_UccLib/: account.py  alert_action.py  custom.py  input_page.py
tests/ui/testdata/: example_file.txt  invalid_file.json  large_file.txt
tests/unit/: pytest.ini  test_base_test.py  test_table.py  test_utils.py
ucc_smartx/: backend_confs.py  base_test.py  plugin.py  utils.py
ucc_smartx/components/: base_component.py  dropdown.py  entity.py  login.py  table.py
ucc_smartx/components/controls/: checkbox.py  learn_more.py  toggle.py  (+4 more)
ucc_smartx/pages/: logging.py  login.py  proxy.py
(+23 files in other folders)
