# SPDX-FileCopyrightText: 2020 Splunk Inc.
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "pytest-splunk-addon-ui-smartx"
description = "Library to support testing Splunk Add-on UX"
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "APACHE-2.0"
classifiers = [
        "Framework :: Pytest",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Testing",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: Apache Software License",
]
packages = [
        {include = "pytest_splunk_addon_ui_smartx/**/*.py"},
]
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.7"
future = "~=0.18"
pytest-html = "*"
urllib3 = ">=1.21.1,<1.27.0"
selenium = "*"
webdriver-manager = "*"
msedge-selenium-tools = "*"
cssselect = "*"
pytest-splunk-addon="~=1.6"

[tool.poetry.dev-dependencies]
pytest = ">=5.4, <6.3"
pytest-splunk-addon = { version = "*", extras = [ "docker" ] }
poetry-dynamic-versioning = "~=0.13"
coverage = "~=5.5"
lovely-pytest-docker = {version = ">=0.1.0", optional = true}
Sphinx = "*"
sphinx_rtd_theme = "*"
sphinx-panels = "*"

[tool.poetry.extras]
docker = ["lovely-pytest-docker"]

[tool.poetry.plugins]
pytest11 = { "ucc-smartx" = "pytest_splunk_addon_ui_smartx.plugin" }

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
