#
# Copyright 2024 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[tool.poetry]
name = "pytest-splunk-addon-ui-smartx"
description = "Library to support testing Splunk Add-on UX"
authors = ["Splunk <addonfactory@splunk.com>"]
license = "Apache-2.0"
classifiers = [
        "Framework :: Pytest",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Testing",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: Apache Software License",
]
packages = [
        {include = "pytest_splunk_addon_ui_smartx/**/*.py"},
]
version = "4.0.1-beta.1"

[tool.poetry.dependencies]
python = "^3.7"
pytest-html = "*"
urllib3 = "^1.21.1"
selenium = "*"
webdriver-manager = "*"
msedge-selenium-tools = "*"
cssselect = "*"
lxml = "^4.8.0"
pytest-splunk-addon = "^5.0.0"

[tool.poetry.plugins]
pytest11 = { "ucc-smartx" = "pytest_splunk_addon_ui_smartx.plugin" }

[tool.poetry.group.dev.dependencies]
pytest = ">=5.4, <7.3"
splunk-add-on-ucc-framework = "5.28.5"
pytest-rerunfailures = "^12.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
